added AttackCommand